[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "python-to-rust"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "maturin>=1.0,<2.0",
    "hypothesis>=6.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
